--- a/regexes.yaml
+++ b/regexes.yaml
@@ -3294,7 +3294,7 @@ device_parsers:
     device_replacement: '$1'
     brand_replacement: 'Sony'
     model_replacement: '$1'
-  - regex: '; *(C(?:1[0-9]|2[0-9]|53|55|6[0-9])[0-9]{2}|D[25]\d{3}|D65\d{2}) Build'
+  - regex: '; *(C(?:1[0-9]|2[0-9]|53|55|6[0-9])[0-9]{2}|D[25]\d{3}|D6[56]\d{2}) Build'
     device_replacement: '$1'
     brand_replacement: 'Sony'
     model_replacement: '$1'
