--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -1929,3 +1929,507 @@ test_cases:
     patch:
     patch_minor:
 
+  - user_agent_string: 'facebookexternalhit/1.0 ( http://www.facebook.com/externalhit_uatext.php) AppEngine-Google; ( http://code.google.com/appengine; appid: rtweetme)'
+    family: 'AppEngine-Google'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'facebookexternalhit/1.0 (+http:#www.facebook.com/externalhit_uatext.php)'
+    family: 'FacebookBot'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'facebookexternalhit/1.1 (+http(s)://www.facebook.com/externalhit_uatext.php)'
+    family: 'FacebookBot'
+    major: '1'
+    minor: '1'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'facebookexternalhit/1.1 (+https://www.facebook.com/externalhit_uatext.php)'
+    family: 'FacebookBot'
+    major: '1'
+    minor: '1'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'AppEngine-Google; (+http://code.google.com/appengine; appid: getfavicon)'
+    family: 'AppEngine-Google'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'BoardReader Favicon Fetcher /1.0 info@boardreader.com'
+    family: 'BoardReader Favicon Fetcher '
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'I just want your favicon'
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'IconSurf/2.0 favicon finder (see http://iconsurf.com/robot.html)'
+    family: 'IconSurf'
+    major: '2'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: "Mozilla/5.0 (Really Gmane.org's favicon grabber)"
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (Windows NT 6.1; rv:6.0) Gecko/20110814 Firefox/6.0 Google favicon'
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 7.0; Diffbot/0.1;  http://www.diffbot.com; http://www.jsplaw.com/favicon.ico)'
+    family: 'iffbot'
+    major: '0'
+    minor: '1'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; YandexFavicons/1.0; +http://yandex.com/bots)'
+    family: 'YandexFavicons'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; favicon.ico Internet survey; research only)'
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Netvibes favicons proxy'
+    family: 'Netvibes'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'User-Agent:  BoardReader Favicon Fetcher /1.0 info@boardreader.com'
+    family: 'BoardReader Favicon Fetcher '
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'favicon finder at http://iconsurf.com/'
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'favicon.bim-zone (+http://favicon.bim-zone.com/)'
+    family: 'favicon'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'faviconda favicon checker v0.8'
+    family: 'faviconda'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Genieo'
+    family: 'Genieo'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; Genieo/1.0 http://www.genieo.com/webfilter.html'
+    family: 'Genieo'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; Genieo/1.0 http://www.genieo.com/webfilter.html)'
+    family: 'Genieo'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Google-HTTP-Java-Client/1.13.1-beta (gzip)'
+    family: 'Google-HTTP-Java-Client'
+    major: '1'
+    minor: '13'
+    patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'Google-HTTP-Java-Client/1.18.0-rc (gzip)'
+    family: 'Google-HTTP-Java-Client'
+    major: '1'
+    minor: '18'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'JumpCam/1.24.7 (alps SP-140 DC; Android 16; de_DE) Google-HTTP-Java-Client/1.16.0-rc (gzip)'
+    family: 'Google-HTTP-Java-Client'
+    major: '1'
+    minor: '16'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'ZhihuApi/1.0.0-beta (Linux; Android 4.2.2; Ramosi9 Build/Ramos/Ramosi9/Ramosi9/JDQ39/de_DE) Google-HTTP-Java-Client/1.17.0-rc (gzip) Google-HTTP-Java-Client/1.17.0-rc (gzip)'
+    family: 'Google-HTTP-Java-Client'
+    major: '1'
+    minor: '17'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'Icarus6j - (contact: phil@icarus6.com)'
+    family: 'Icarus6j'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Apache-HttpClient/4.3.3 (Java 1.5 minimum; Java/1.7.0_45)'
+    family: 'Apache-HttpClient'
+    major: '4'
+    minor: '3'
+    patch: '3'
+    patch_minor:
+
+  - user_agent_string: 'BlogBridge 5.0.1 Discoverer (http://www.blogbridge.com/) Java/1.5.0_10'
+    family: 'BlogBridge'
+    major: '5'
+    minor: '0'
+    patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'BlogBridge Service (http://www.blogbridge.com/) Java/1.5.0_09'
+    family: 'BlogBridge'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'IEMobile/v6.0 LG-GM730/V20b Browser/IE8.12 MMS/LGMMSv1.0/1.2 Java/LGVM/1.1 Profile/MIDP-2.1 Configuration/CLDC-1.1/Mozilla/4.0 (compatible; MSIE 6.0; Windows CE; IEMobile 8.12; MSIEMobile 6.0)'
+    family: 'IE Mobile'
+    major: '8'
+    minor: '12'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'JNLP/1.7.0 javaws/10.17.2.02 (<internal>) Java/1.7.0_17'
+    family: 'JNLP'
+    major: '1'
+    minor: '7'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'JNLP/6.0 javaws/1.6.0_41 (b02) Java/1.6.0_41'
+    family: 'JNLP'
+    major: '6'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'KDDI-CA34 UP.Browser/6.2.0.10.2.2(GUI)MMP/2.0 (compatible; KDDI-Googlebot-Mobile/2.1; http://www.google.com/bot.html)'
+    family: 'Googlebot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'IMVU Client/501.0 Python-urllib/2.7'
+    family: 'Python-urllib'
+    major: '2'
+    minor: '7'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (Python-urllib2)'
+    family: 'Python-urllib'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Python-urllib/1.15'
+    family: 'Python-urllib'
+    major: '1'
+    minor: '15'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Python-urllib/2.5 AppEngine-Google; ( http://code.google.com/appengine; appid: visitorfeedr)'
+    family: 'Python-urllib'
+    major: '2'
+    minor: '5'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'TLSProber/0.1'
+    family: 'TLSProber'
+    major: '0'
+    minor: '1'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'TLSProber/0.8'
+    family: 'TLSProber'
+    major: '0'
+    minor: '8'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; WASALive Bot ; http://blog.wasalive.com/wasalive-bots/)'
+    family: 'WASALive Bot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; WASALive Bot ; http://blog.wasalive.com/wasalive-bots/) Java/1.6.0_07'
+    family: 'WASALive Bot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; WASALive Bot ; http://blog.wasalive.com/wasalive-bots/),gzip(gfe),gzip(gfe),gzip(gfe)'
+    family: 'WASALive Bot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; WASALive Bot ;+http://blog.wasalive.com/wasalive-bots/)'
+    family: 'WASALive Bot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (compatible; WASALive-Bot ; http://blog.wasalive.com/wasalive-bots/)'
+    family: 'WASALive-Bot'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WhatWeb/0.4.6'
+    family: 'WhatWeb'
+    major: '0'
+    minor: '4'
+    patch: '6'
+    patch_minor:
+
+  - user_agent_string: 'WhatWeb/0.4.6,gzip(gfe),gzip(gfe)'
+    family: 'WhatWeb'
+    major: '0'
+    minor: '4'
+    patch: '6'
+    patch_minor:
+
+  - user_agent_string: 'WhatWeb/0.4.8-dev'
+    family: 'WhatWeb'
+    major: '0'
+    minor: '4'
+    patch: '8'
+    patch_minor:
+
+  - user_agent_string: 'Asynchronous WinHTTP/1.0'
+    family: 'WinHTTP'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: "Browser Capabilities Project AutoDownloader; created by TKC Inc.; uses Microsoft's WinHTTP component"
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: "Browser Capabilities Project AutoDownloader; created by Tom Kelleher Consulting, Inc. (tkelleher.com); used with special permission from Gary Joel Keith; uses Microsoft's WinHTTP component"
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'DgClient/6.0/WinHTTP'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'LSI via ALWinHTTP/3.0c ( contact leaguelsi@gmail.com in case of issues )'
+    family: 'WinHTTP'
+    major: '3'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'My WinHTTP Connection'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'My WinHTTP Connection,gzip(gfe),gzip(gfe)'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP AutoProxy AnyConnect/1.0'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP AutoProxy Sample/1.0'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP AutoProxy Test'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP AutoProxy/1.0'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP Downloader'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP Example/1.0'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP Example/1.0,gzip(gfe),gzip(gfe)'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP LpsReaper/10.1.20'
+    family: 'WinHTTP'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WinHTTP/1.0'
+    family: 'WinHTTP'
+    major: '1'
+    minor: '0'
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'Pachacutec/0.4 (qpImageBuilders.com); WordPress/3.0.5; http://contacto-latino.com/news'
+    family: 'WordPress'
+    major: '3'
+    minor: '0'
+    patch: '5'
+    patch_minor:
+
+  - user_agent_string: 'SAE/fetchurl-klkz0n3xn3 WordPress/3.2.1; http://mmxf.sinaapp.com'
+    family: 'WordPress'
+    major: '3'
+    minor: '2'
+    patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'WordPress/ PHP/5.0.4'
+    family: 'WordPress'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WordPress/1.5.2 PHP/4.3.10'
+    family: 'WordPress'
+    major: '1'
+    minor: '5'
+    patch: '2'
+    patch_minor:
+
+  - user_agent_string: 'WordPress/2.9.2; http://bigappletowing.co.cc'
+    family: 'WordPress'
+    major: '2'
+    minor: '9'
+    patch: '2'
+    patch_minor:
+
+  - user_agent_string: 'WordPress/3.0.1; http://lineadecodigo.com,gzip(gfe),gzip(gfe),gzip(gfe)'
+    family: 'WordPress'
+    major: '3'
+    minor: '0'
+    patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'WordPress/MU; http://thesavinghabit.wordpress.com'
+    family: 'WordPress'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
+  - user_agent_string: 'WordPress/abc; http://bejostobbo.com'
+    family: 'WordPress'
+    major:
+    minor:
+    patch:
+    patch_minor:
+
