--- a/test_resources/pgts_browser_list.yaml
+++ b/test_resources/pgts_browser_list.yaml
@@ -588,7 +588,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'Clushbot/3.31-BinaryFury (+http://www.clush.com/bot.html)'
-    family: 'lushbot'
+    family: 'Clushbot'
     major: '3'
     minor: '31'
     patch:
@@ -1245,7 +1245,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'dloader(NaverRobot)/1.1'
-    family: 'averRobot'
+    family: 'NaverRobot'
     major:
     minor:
     patch:
@@ -2584,9 +2584,9 @@ test_cases:
     patch:
 
   - user_agent_string: 'Googlebot-Image/1.0 (+http://www.googlebot.com/bot.html'
-    family: 'Googlebot'
-    major:
-    minor:
+    family: 'Googlebot-Image'
+    major: '1'
+    minor: '0'
     patch:
     patch_minor:
 
@@ -14836,7 +14836,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040707 Lightningspider/0.9.2'
-    family: 'ightningspider'
+    family: 'Lightningspider'
     major: '0'
     minor: '9'
     patch: '2'
@@ -39621,7 +39621,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 4.0; Girafabot; girafabot at girafa dot com; http://www.girafa.com)'
-    family: 'irafabot'
+    family: 'Girafabot'
     major:
     minor:
     patch:
@@ -74562,7 +74562,7 @@ test_cases:
     patch:
 
   - user_agent_string: 'Uptimebot'
-    family: 'ptimebot'
+    family: 'Uptimebot'
     major:
     minor:
     patch:
