--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -1720,7 +1720,6 @@ test_cases:
     patch: '2'
     patch_minor:
 
-
   - user_agent_string: 'Mozilla/4.0 (compatible; MSIE 6.0; S60; SymbOS; Opera Mobi/447; en-US) Opera 10.00'
     family: 'Opera Mobile'
     major: '10'
@@ -1845,27 +1844,6 @@ test_cases:
     minor: '0'
     patch: 'b2'
 
-  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 2.2.1; es-us) AppleWebKit/534.12 (KHTML, like Gecko) Puffin/1.3.2913S Mobile Safari/534.12'
-    family: 'Puffin'
-    major: '1'
-    minor: '3'
-    patch: '2913'
-    patch_minor:
-
-  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 3.2.1; es-es) AppleWebKit/534.35 (KHTML, like Gecko) Chrome/11.0.696.65 Safari/534.35 Puffin/2.0.6440M Mobile'
-    family: 'Puffin'
-    major: '2'
-    minor: '0'
-    patch: '6440'
-    patch_minor:
-
-  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 3.2; en-gb) AppleWebKit/534.35 (KHTML, like Gecko) Chrome/11.0.696.65 Safari/534.35 Puffin/2.0.5932M Mobile'
-    family: 'Puffin'
-    major: '2'
-    minor: '0'
-    patch: '5932'
-    patch_minor:
-
   - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 4.1.1; en-us) AppleWebKit/534.35 (KHTML, like Gecko)  Chrome/11.0.696.65 Safari/534.35 Puffin/2.9909AT Mobile'
     family: 'Puffin'
     major: '2'
@@ -1886,7 +1864,6 @@ test_cases:
     minor: '11558'
     patch:
     patch_minor:
-
 
   - user_agent_string: 'Mozilla/5.0 (X11; U; Linux i686; th-TH@calendar=gregorian) AppleWebKit/534.12 (KHTML, like Gecko) Puffin/1.3.2665MS Safari/534.12'
     family: 'Puffin'
@@ -2022,7 +1999,7 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'Mozilla/5.0 (compatible; MSIE 7.0; Diffbot/0.1;  http://www.diffbot.com; http://www.jsplaw.com/favicon.ico)'
-    family: 'iffbot'
+    family: 'Diffbot'
     major: '0'
     minor: '1'
     patch:
@@ -2176,9 +2153,9 @@ test_cases:
     patch_minor:
 
   - user_agent_string: 'KDDI-CA34 UP.Browser/6.2.0.10.2.2(GUI)MMP/2.0 (compatible; KDDI-Googlebot-Mobile/2.1; http://www.google.com/bot.html)'
-    family: 'Googlebot'
-    major:
-    minor:
+    family: 'KDDI-Googlebot-Mobile'
+    major: '2'
+    minor: '1'
     patch:
     patch_minor:
 
